# itkAlphaAMD

./: CMakeLists.txt  LICENSE  README.md
images/: attribution.txt
script/: eval_registration.py  eval_registration.py~
scripts/: alpha_levels_param_search.txt  dist_table.py  eval_cilia_param_search.py  eval_cilia_param_search_rev.py  eval_cilia_pw.py  eval_lpba40_alpha_smd.py  eval_lpba40_transform_brain_masks.py  eval_synth_cilia.py  eval_synth_cilia_test.py  eval_synth_lpba40.py  extract_runtime_from_logs.py  landmarks.py  lpba40_1.sh  lpba40_2.sh  make_workunit.py  param_file_randomizer.py  registration.py  script_tools.py  time_analysis_2d.sh  time_analysis_3d.sh
source/: CMakeLists.txt  Log.h  absReg.cpp  absReg.cpp~  acLabelOverlap.cpp  acRandomTransforms.cpp  acRegister.cpp  acTestBSpline.cpp  acTestBSpline.cpp~  acTestBSpline2.cpp  acTimeAnalysis.cpp  acTransform.cpp  acTransformLandmarks.cpp  alphaAMDDeformableRegistration.h  bsplineFunctions.h  bsplineFunctions.h~  formatConv.cpp  pwEvalDeformable.cpp  pwEvalDeformableND.cpp  registerBSpline.cpp  registerBSpline3D.cpp  registerBSpline3D_2.cpp~  synthEvalDeformable.cpp  synthEvalDeformable.cpp~  synthEvalDeformableND.cpp  testMCDS.cpp  utilFunctions.h
source/common/: gridLock.h  itkImageProcessingTools.h  minicsv.h  progress.h  quantization.h
source/metric/: itkAlphaSMDMetric2.h  itkAlphaSMDMetricDeform (copy).h  itkAlphaSMDMetricDeform.h  itkAlphaSMDMetricDeform.h~  itkAlphaSMDMetricDeform2.h  itkAlphaSMDMetricDeform3.h  itkAlphaSMDMetricInternal2.h  mcAlphaCutPointToSetDistance.h  mcAlphaCutPointToSetDistance_old.h  mcds.h  mcds.h~  mcds2.h  mcds3.h  mcds4.h  mcds5.h  mcds6.h  mcds7 (copy).h  mcds7.h  mcds7_withoutstruct.h  mcds8.h  pointSampler.h  quasiRandomGenerator.h  samplers.h  valueSampler.h
source/programs/: evaluateRegistration.cpp  imageInfo.cpp  registerDeformable.cpp  synthDeformImage.cpp
source/registration/: alphaBSplineRegistration.h  alphaBSplineRegistration4.h  alphaLinearRegistration.h  registrationRoutines.h
source/samplers/: pointSampler.h  pointSamplerBase.h  quasiRandomGenerator.h  valueSampler.h
source/tests/: testPointSamplers.cpp  testRegistration.cpp  testSuite.cpp  testValueSamplers.cpp
